--- a/BestLayer.css
+++ b/BestLayer.css
@@ -12,7 +12,7 @@
     position: fixed; top:0;  bottom:0; left:0; right:0;z-index: 9998; background: rgba(0,0,0,.2);display: none;
 }
 
-.bs-layer-title{
+.bs-layer-header{
     position: relative;
     background-color: #f2f2f2;
     height:50px;
@@ -28,9 +28,13 @@
     border-top-right-radius: 6px;
 }
 
+.bs-layer-title{
+    position: absolute;
+    left:20px;
+}
+
 .bs-layer-icon-close{
     position: absolute;
-    content: "X";
     right:20px;
 }
 .bs-layer-icon-close:hover{
